Closed Bug 1421191 Opened 7 years ago Closed 7 years ago

some downscaled images don't show because we fail to generate the filter

Categories

(Core :: Graphics, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla59
Tracking Status
firefox58 --- fixed
firefox59 --- fixed

People

(Reporter: tnikkel, Assigned: tnikkel)

References

Details

Attachments

(3 files)

      No description provided.
Attached image files-icons@2x.png
Attached file m.html
When I view m.html on a retina screen and zoom out 2 or 3 times the image disappears.
Attached patch convolfloatSplinter Review
Attachment #8932368 - Flags: review?(jmuizelaar)
Comment on attachment 8932368 [details] [diff] [review]
convolfloat

Stealing this review since I was responsible for putting this code in in the first place. :)
Attachment #8932368 - Flags: review?(jmuizelaar) → review+
Summary: some downscaled dimages on't show because we fail to generate the filter → some downscaled images don't show because we fail to generate the filter
Pushed by tnikkel@gmail.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/a538864efb28
In ConvolutionFilter::ComputeResizeFilter calculate the src pixel every loop iteration. r=lsalzman
https://hg.mozilla.org/mozilla-central/rev/a538864efb28
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla59
Comment on attachment 8932368 [details] [diff] [review]
convolfloat

Approval Request Comment
[Feature/Bug causing the regression]: bug 1371689
[User impact if declined]: large images (think sprite sheets) that are downscaled may not draw
[Is this code covered by automated tests?]: yes
[Has the fix been verified in Nightly?]: not yet
[Needs manual test from QE? If yes, steps to reproduce]: no
[List of other uplifts needed for the feature/fix]: none
[Is the change risky?]: no
[Why is the change risky/not risky?]: basically one line change to go back to the way this code worked before bug 1371689
[String changes made/needed]: none
Attachment #8932368 - Flags: approval-mozilla-beta?
Comment on attachment 8932368 [details] [diff] [review]
convolfloat

Fix a large image drawing issue when downscaling. Beta58+.
Attachment #8932368 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: